--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "predis/predis": "^1.1",
         "twilio/sdk": "^6.9"
     },
     "require-dev": {
